; ModuleID = '/home/carl/AnghaBench/git/extr_tag.c_release_tag_memory.c'
source_filename = "/home/carl/AnghaBench/git/extr_tag.c_release_tag_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tag = type { i64, %struct.TYPE_2__, i32*, i32 }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @release_tag_memory(%struct.tag* %0) #0 {
  %2 = alloca %struct.tag*, align 8
  store %struct.tag* %0, %struct.tag** %2, align 8
  %3 = load %struct.tag*, %struct.tag** %2, align 8
  %4 = getelementptr inbounds %struct.tag, %struct.tag* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 8
  %6 = call i32 @free(i32 %5)
  %7 = load %struct.tag*, %struct.tag** %2, align 8
  %8 = getelementptr inbounds %struct.tag, %struct.tag* %7, i32 0, i32 2
  store i32* null, i32** %8, align 8
  %9 = load %struct.tag*, %struct.tag** %2, align 8
  %10 = getelementptr inbounds %struct.tag, %struct.tag* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load %struct.tag*, %struct.tag** %2, align 8
  %13 = getelementptr inbounds %struct.tag, %struct.tag* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  ret void
}

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
